objects/EUR_CRM_Route_Template_Day__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Day__c</fullName>
        <label>Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Route_Template_Item__c</fullName>
        <label>Route Template Item</label>
        <referenceTo>EUR_CRM_Route_Template_Item__c</referenceTo>
        <relationshipName>EUR_CRM_Route_Template_Days</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Week_Day__c</fullName>
        <description>1- Monday
2- Tuesday
3- Wednesday
4- Thursday
5- Friday
6- Saturday
7- Sunday</description>
        <label>Week Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Route Template Day (EU)</label>
    <nameField>
        <displayFormat>RTD-{0000000000}</displayFormat>
        <label>Route Template Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Template Day (EU)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>